--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "functional": "1.0.0",
     "immutable": "4.0.0-rc.12",
+    "lodash": "^4.17.11",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1"
