--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "react-hoc-form",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "functional": "1.0.0",
-    "immutable": "4.0.0-rc.12",
-    "lodash": "^4.17.11",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.0.1"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "functional": "^1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1",
     "typescript": "3.3.3"
   },
   "scripts": {
