--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,4 @@
 {
-  "printWidth": 80,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": true,
-  "singleQuote": false,
-  "trailingComma": "none",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "fluid": false
+  "printWidth": 100,
+  "singleQuote": true
 }
